plugins {
	id 'java'
	id 'org.springframework.boot' version '3.2.2'
	id 'io.spring.dependency-management' version '1.1.4'
}

group = 'com.project'
version = '0.0.1-SNAPSHOT'

java {
	sourceCompatibility = '17'
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	developmentOnly 'org.springframework.boot:spring-boot-devtools'
	runtimeOnly 'com.h2database:h2'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	implementation("org.springdoc:springdoc-openapi-starter-webmvc-ui:2.0.4")
	// https://mvnrepository.com/artifact/com.razorpay/razorpay-java
	implementation group: 'com.razorpay', name: 'razorpay-java', version: '1.4.5'
}

tasks.named('test') {
	useJUnitPlatform()
}
